Refactored a bit, moved the watcher into it's own library called EDJournalQueue, added event raising for changes to queue and missions list. Needs using on UI side instead of timer next

--- a/EDMissionStackViewer/EDMissionStackViewer.csproj
+++ b/EDMissionStackViewer/EDMissionStackViewer.csproj
@@ -13,15 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Controls\EDMissionCourierUI.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Update="Controls\EDMissionCollectUI.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Update="Controls\EDMissionMassacreUI.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <ProjectReference Include="..\EDJournalQueue\EDJournalQueue.csproj" />
   </ItemGroup>
 
 </Project>
