--- a/EDMissionStackViewer/EDMissionStackViewer.csproj
+++ b/EDMissionStackViewer/EDMissionStackViewer.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Title>ED Mission Stack Viewer</Title>
+    <Company>$(Authors)</Company>
+    <PackageIcon>EDMissionStackViewer.ico</PackageIcon>
+    <ApplicationIcon>EDMissionStackViewer.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +18,26 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EDJournalQueue\EDJournalQueue.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="EDMissionStackViewer.ico">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
