--- a/EDMissionStackViewer/EDMissionStackViewer.csproj
+++ b/EDMissionStackViewer/EDMissionStackViewer.csproj
@@ -10,6 +10,7 @@
     <Company>$(Authors)</Company>
     <PackageIcon>EDMissionStackViewer.ico</PackageIcon>
     <ApplicationIcon>EDMissionStackViewer.ico</ApplicationIcon>
+    <FileVersion>0.9.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
