add archiving function for journal files not holding any active missions Added max days and archiving options to config/settings dialog

--- a/EDMissionStackViewer/App.config
+++ b/EDMissionStackViewer/App.config
@@ -10,6 +10,12 @@
             <setting name="JournalFolders" serializeAs="String">
                 <value />
             </setting>
+            <setting name="JournalMaxAgeDays" serializeAs="String">
+                <value>28</value>
+            </setting>
+            <setting name="ArchiveInactiveJournals" serializeAs="String">
+                <value>False</value>
+            </setting>
         </EDMissionStackViewer.Properties.Settings>
     </userSettings>
 </configuration>
