--- a/EDMissionStackViewer/Properties/Settings.settings
+++ b/EDMissionStackViewer/Properties/Settings.settings
@@ -5,5 +5,11 @@
     <Setting Name="JournalFolders" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="JournalMaxAgeDays" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">28</Value>
+    </Setting>
+    <Setting Name="ArchiveInactiveJournals" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
