--- a/EDMissionStackViewer/Properties/Settings.settings
+++ b/EDMissionStackViewer/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)">28</Value>
     </Setting>
     <Setting Name="ArchiveInactiveJournals" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
