Fixes to bounty and cargodepot event handling edge cases Made all reward fields decimal to allow for larger figures Handle edits to journal folders on the fly (still not right yet though...) Fixed missing handlers for some setting UI changes

--- a/EDMissionStackViewer/App.config
+++ b/EDMissionStackViewer/App.config
@@ -9,7 +9,8 @@
   <userSettings>
     <EDMissionStackViewer.Properties.Settings>
       <setting name="JournalFolders" serializeAs="String">
-        <value />
+        <!--<value />-->
+        <value>E:\Users\Mark\Saved Games\Frontier Developments\Elite Dangerous\WarzoneJournalFiles</value>
       </setting>
       <setting name="JournalMaxAgeDays" serializeAs="String">
         <value>28</value>
