Removed bad suspend/resume layouts causing issues with sizing

--- a/EDMissionStackViewer/EDMissionStackViewer.csproj
+++ b/EDMissionStackViewer/EDMissionStackViewer.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationHighDpiMode>SystemAware</ApplicationHighDpiMode>
+    <ForceDesignerDpiUnaware>true</ForceDesignerDpiUnaware>
     <Title>ED Mission Stack Viewer</Title>
     <Company>$(Authors)</Company>
     <PackageIcon>EDMissionStackViewer.ico</PackageIcon>
