Set to v0.9.6 Added serilog config to app.config file, default to info level Added more debug logging Addressed reload/unload of commander tabs after journal folder changes

--- a/EDMissionStackViewer/App.config
+++ b/EDMissionStackViewer/App.config
@@ -9,8 +9,7 @@
   <userSettings>
     <EDMissionStackViewer.Properties.Settings>
       <setting name="JournalFolders" serializeAs="String">
-        <!--<value />-->
-        <value>E:\Users\Mark\Saved Games\Frontier Developments\Elite Dangerous\WarzoneJournalFiles</value>
+        <value />
       </setting>
       <setting name="JournalMaxAgeDays" serializeAs="String">
         <value>28</value>
@@ -20,4 +19,11 @@
       </setting>
     </EDMissionStackViewer.Properties.Settings>
   </userSettings>
+  <appSettings>
+    <add key="serilog:minimum-level" value="Debug"/>
+    <add key="serilog:using:File" value="Serilog.Sinks.File" />
+    <add key="serilog:write-to:File.path" value="EDMissionStackViewer.log" />
+    <add key="serilog:write-to:File.rollingInterval" value="Day" />
+    <add key="serilog:write-to:File.retainedFileCountLimit" value="7" />
+  </appSettings>
 </configuration>
