switch to Information log level by default

--- a/EDMissionStackViewer/App.config
+++ b/EDMissionStackViewer/App.config
@@ -20,7 +20,7 @@
     </EDMissionStackViewer.Properties.Settings>
   </userSettings>
   <appSettings>
-    <add key="serilog:minimum-level" value="Debug"/>
+    <add key="serilog:minimum-level" value="Information"/>
     <add key="serilog:using:File" value="Serilog.Sinks.File" />
     <add key="serilog:write-to:File.path" value="EDMissionStackViewer.log" />
     <add key="serilog:write-to:File.rollingInterval" value="Day" />
